<resources>
    <string name="app_name">E-Ink Launcher</string>
    <string name="file_manager">File Manager</string>

    <string name="empty_directory_hint">Empty directory</string>
    <string name="start_path_name">Device</string>
    <string name="type_archive">Archive</string>
    <string name="type_certificate">Certificate</string>
    <string name="type_directory">Directory</string>
    <string name="type_document">File</string>
    <string name="type_drawing">Picture</string>
    <string name="type_excel">Spreadsheet</string>
    <string name="type_image">Image</string>
    <string name="type_music">Music</string>
    <string name="type_video">Video</string>
    <string name="type_pdf">PDF document</string>
    <string name="type_power_point">Presentation</string>
    <string name="type_word">Document</string>
    <string name="type_apk">APK</string>

    <string name="battery_status_low_battery">Low power</string>
    <string name="setting_show_divider">Show Divider</string>
    <string name="setting_hide_divider">Hide Divider</string>
    <string name="setting_set_font_size">Change Font Size</string>
    <string name="setting_apps_manager">Apps Manager</string>
    <string name="setting_column_icons">Column</string>
    <string name="setting_row_icons">"   Row   "</string>
    <string name="toast_need_wifi_connnect">Please connect Wlan!</string>
    <string name="app_manager_finish">Done</string>
    <string name="battery_heat">Battery Overheat</string>
    <string name="battery_unknown">Unknown</string>
    <string name="battery_charging">Charging</string>
    <string name="battery_low">Low Battery</string>
    <string name="battery_full">Full</string>
    <string name="battery_wtf">WTF?</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_rename">Rename</string>
    <string name="dialog_hide">Hide</string>
    <string name="dialog_uninstall">Uninstall</string>
    <string name="dialog_pkg_name">Package Name: %s</string>
    <string name="dialog_close">Close</string>

    <string name="wifi_status_off">WiFi OFF</string>
    <string name="wifi_status_closing">WiFi closing</string>
    <string name="wifi_status_opening">WiFi opening</string>
    <string name="wifi_status_on">WiFi ON</string>
    <string name="wifi_status_connected">WiFi connected:%s</string>
    <string name="wifi_status_connecting">WiFi connecting</string>
    <string name="wifi_status_disconnected">WiFi disconnected</string>
    <string name="wifi_status_disconnecting">WiFi disconnecting</string>

    <string name="item_lockscreen">Lock Screen</string>
    <string name="item_lockscreen_builtin">Lock Screen (Built-in)</string>
    <string name="hide_builtin_lock">Hide This Icon</string>
    <string name="hide_builtin_lock_hint">Built-in lock screen hidden. You can restore it in Settings -&gt; Manage Apps.</string>
    <string name="launch_failed">Launch failed</string>
    <string name="launch_devicemanager_failed">Please open Device Policy Manager and enable E-Ink Launcher</string>
    <string name="launch_devicemanager">Open Device Policy Manager</string>

    <string-array name="power_menu">
        <item>Power off</item>
        <item>Reboot</item>
    </string-array>
    <string name="power_title">Power options</string>
    <string name="setting_help_and_about">Help &amp; About</string>
    <string name="path">Path</string>
    <string name="default_path_setting">Default Path</string>
    <string name="dialog_confim">Confim</string>
    <string name="parent_folder">Parent folder</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="show_statusbar">Show StatusBar</string>
    <string name="show_custom_icon">Show custom icon</string>
    <string name="app_show_name">App name</string>
    <string name="setting_sort_mode">Sort</string>
    <string name="sort_need_usage_permission">Please grant usage access permission for this sort mode</string>
    <string name="setting_layout_lock">Layout Lock</string>
    <string name="setting_show_lock_hint">Show Lock Hint</string>
    <string name="setting_text_bold">Bold text</string>
    <string name="layout_lock_confirm_title">Enable Layout Lock</string>
    <string name="layout_lock_confirm_message">The current icon order will be frozen and newly installed apps will be appended to the end. Sort mode cannot be changed until you unlock. Continue?</string>
    <string name="layout_locked_toast">Layout is locked, unlock it first</string>
    <string name="setting_layout_adjust">Adjust Layout</string>
    <string name="adjust_mode_hint">Adjust layout: long-press to select an app, then tap another to swap positions. Tap the selected app again to cancel.</string>
    <string name="layout_adjust_saved">Layout adjusted and saved</string>
    <string name="dialog_ok">OK</string>
    <string name="restart_launcher">Restart Launcher</string>
    <string name="about_thanks">Thanks:\n%1$s</string>
    <string name="launcher_settings">Launcher Settings</string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="page_status" translatable="false">%1$d/%2$d</string>
</resources>
