<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_file_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wuming.einklauncher.filemanager.FileManager">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path"
            android:textColor="@android:color/black"
            android:paddingRight="15dp"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFilePath"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ellipsize="start"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:drawSelectorOnTop="false"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollbars="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <ListView
        android:id="@+id/mFileList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:id="@+id/btnLastPath"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/parent_folder"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="invisible" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <ImageView
            android:id="@+id/toSetting"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/launcher_settings"
            android:padding="10dp"
            android:src="@drawable/navibar_icon_settings_highlight" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/exit"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
