<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.wuming.einklauncher.widgets.EInkLauncherView
        android:id="@+id/mList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"></com.wuming.einklauncher.widgets.EInkLauncherView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#000000" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/toSetting"
                android:layout_width="54dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/launcher_settings"
                android:padding="10dp"
                android:src="@drawable/navibar_icon_settings_highlight" />

            <LinearLayout
                android:id="@+id/batteryLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/toSetting"
                android:layout_toStartOf="@id/toSetting"
                android:layout_marginRight="6dp"
                android:layout_marginEnd="6dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.wuming.einklauncher.widgets.BatteryView
                    android:id="@+id/batteryProgress"
                    android:layout_width="22dp"
                    android:layout_height="12dp"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/batteryPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:textColor="#000000"
                    android:textSize="13dp"
                    tools:text="85%" />

                <TextView
                    android:id="@+id/batteryStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/battery_charging"
                    android:textColor="#000000"
                    android:textSize="11dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/pageStatus"
                android:layout_width="wrap_content"
                android:minWidth="44dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/pageStatus"
                android:layout_toEndOf="@id/pageStatus"
                android:layout_toLeftOf="@id/batteryLayout"
                android:layout_toStartOf="@id/batteryLayout"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="#000000"
                android:textSize="14dp" />

            <Button
                android:id="@+id/lastPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_page"
                android:visibility="gone" />

            <Button
                android:id="@+id/nextPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_page"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/deleteFinish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/app_manager_finish"
            android:textSize="18sp"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>